Fix score outside of container on mobile.

--- a/front/src/components/Score/Score.scss
+++ b/front/src/components/Score/Score.scss
@@ -9,7 +9,10 @@
     margin: 0px 20px;
   }
 
-  img{
-    margin: 0px 20px;
+  .awayImg {
+    margin-left: 10px;
+  }
+  .homeImg {
+    margin-right: 10px;
   }
 }
